Bug 85161 - File open: symbol "005E" not shown in .docx file
Summary: File open: symbol "005E" not shown in .docx file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-17 23:21 UTC by Juha
Modified: 2017-06-17 02:54 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
The problematic .docx file (50.27 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-10-17 23:21 UTC, Juha
Details
Only the symbol (11.32 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-10-18 18:40 UTC, Luke
Details
missing symbol (140.51 KB, image/png)
2017-06-02 03:58 UTC, vihsa
Details
Stripped-down Bug Doc with only the symbol (15.36 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2017-06-07 06:59 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Juha 2014-10-17 23:21:02 UTC
Created attachment 108012 [details]
The problematic .docx file

LibreOffice is missing a certain symbol which MS Office shows.

I don't know the name of that symbol but it's here: http://i.imgbox.com/yBpQAMpN.png

And here is screenshot indicating that LibreOffice misses that symbol. http://i.imgbox.com/Pr1cgMcI.png I circled the area where that symbol should be.

Also, the problematic .docx file is attached.
Comment 1 tommy27 2014-10-18 07:48:05 UTC
I confirm bug under Winx64 using LibO 4.3.2.2 and 4.4.0.0.alpha0+
Build ID: 3e2bd1e4022e25b77bcc8eba5e02c1adc57008a1
TinderBox: Win-x86@42, Branch:master, Time: 2014-10-16_01:04:13

same bug with AOO 4.1.0 hence issue is inherited from OOo.
status NEW. edited summary notes
Comment 2 Cor Nouws 2014-10-18 09:21:08 UTC
(In reply to tommy27 from comment #1)

> same bug with AOO 4.1.0 hence issue is inherited from OOo.

That is not necessarily the case ;) But for this document (I checked) Yes.
Comment 3 Luke 2014-10-18 18:40:10 UTC
Created attachment 108033 [details]
Only the symbol

Steps to reproduce:
1) In Word -> Insert Symbol
2) Select Font "Symbol"
3) Select Character Code "005E"
4) Save as DOCX

Note if you save a DOC, Writer can correctly import the symbol
Comment 4 Mark Hung 2015-07-06 12:24:37 UTC
Maybe duplicate with tdf#92281.
Comment 5 Mark Hung 2015-07-06 23:08:17 UTC
Last comment is incorrect.
It is tdf#91594 instead tdf#92281.
Comment 6 Luke 2015-07-30 03:52:17 UTC
Mark Hung's patch:

http://cgit.freedesktop.org/libreoffice/core/commit/?id=62e2fae93e8894f73560a30ae1e752cbd4c001ad

also resolved this issue.
Comment 7 Juha 2015-08-28 19:01:59 UTC
Not fixed. running LO 5.0.1.2 on Windows 7.
Comment 8 Luke 2015-08-28 22:31:27 UTC
Juha,
Do NOT reopen bugs. Only developers should do that. 

You need to test with daily builds from the master branch to verify fixes. 

http://dev-builds.libreoffice.org/daily/master/
Comment 9 Juha 2015-08-29 11:28:55 UTC
Sorry.

I tried this one: http://dev-builds.libreoffice.org/daily/master/Win-x86_64@62-TDF/2015-08-23_00.19.44/

But still, I'm having the same issue.
Comment 10 vihsa 2017-06-02 03:58:24 UTC
Created attachment 133797 [details]
missing symbol
Comment 11 vihsa 2017-06-02 04:01:57 UTC
symbol is visible on attachment 108033 [details], the symbol is not visible on attachment 108012 [details], please find the screenshot attachment.
Version: 5.5.0.0.alpha0+
Build ID: 066665644b398a882e6cded98af5bb060af41d76
TinderBox: Android-ARM@24-Bytemark-Hosting, Branch: Master, Time: 2017-06-01 00:30:43
Comment 12 Luke 2017-06-07 06:59:34 UTC
Created attachment 133887 [details]
Stripped-down Bug Doc with only the symbol

Mark This was marked a dupe of Bug 91594, which fixed my simple version but not the actual test doc. I've created a stripped-down version from the test doc that's still not working.
Comment 13 Commit Notification 2017-06-16 13:54:21 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6e855d89e9d7807c16569ec7e335ea2dbafba47d

tdf#85161 fix the case for ooxml fields without any seperator.

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2017-06-16 13:55:38 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dfed429eaceb4ec8316b06ad18a8473ff1d34a2b

tdf#85161 implement ooxml SYMBOL field instruction

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Luke 2017-06-17 02:54:05 UTC
Both the original bug doc and my stripped down test case are correctly imported in Version: 6.0.0.0.alpha0+ (x64)
Build ID: 2404a17e157273430d40ceaa1ab1275e7b50ba6e 

Thank you Mark Hung!