tdf#85161 fix the case for ooxml fields without any seperator.

Field commands were closed when a seperator appeared. Those
fields that only had begin and end fldChar just disapeared.

Change-Id: I77928393826a3ffd4a35fb8fe9adeb1892f99683